[Autofill] Fill Autocomplete correctly after suggestion.

Tbr-ing tkent@ for the TODO comment I added in WebInputElement.h

Bug: 777097
Change-Id: Ia7c9b839521211d4527f067f848cd7988a49f64c
Tbr: tkent@chromium.org
Reviewed-on: https://chromium-review.googlesource.com/734104
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512553}
Former-commit-id: 018bf76b5eb54811482aff02d07c14f4e1ce3c36