third_party/WebKit/public/web/WebInputElement.h
@@ -73,6 +73,8 @@ class BLINK_EXPORT WebInputElement final : public WebFormControlElement {
   // Sets the value inside the text field without being sanitized. Can't be
   // used if a renderer doesn't exist or on a non text field type. Caret will
   // be moved to the end.
+  // TODO(crbug.com/777850): Remove all references to SetEditingValue, as it's
+  // not used anymore.
   void SetEditingValue(const WebString&);
   bool IsValidValue(const WebString&) const;
   bool IsChecked() const;
